# cimg_lab

./: .gitignore  CMakeLists.txt  README.md  app.py  main.cpp  requirements.txt
src/: main.cpp  main_blur.cpp
src/modules/: blur.cpp  blur.h  gradient.cpp  gradient.h
